--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E91E63"
+    android:background="@color/colorBackground"
     tools:context=".MainActivity">
 
     <Button
@@ -15,6 +15,7 @@
         android:drawableBottom="@android:color/background_dark"
         android:text="tap me"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
+        android:backgroundTint="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
